[gd_scene load_steps=20 format=3 uid="uid://cg0e6xtloabql"]

[ext_resource type="Script" uid="uid://b5qq2aurco47k" path="res://actors/player.gd" id="1_0lbjl"]
[ext_resource type="Texture2D" uid="uid://d25hqrx8bfqu0" path="res://assets/city_tileset_8x8.png" id="2_hf73d"]
[ext_resource type="Material" uid="uid://bkwojd1f3ysbu" path="res://vfx/actor_material.tres" id="3_m3new"]
[ext_resource type="PackedScene" uid="uid://bqf5chdoirwek" path="res://modules/gun_turret_module.tscn" id="3_td6ek"]
[ext_resource type="PackedScene" uid="uid://cty87vwubofv3" path="res://smoke_particles.tscn" id="3_yylic"]
[ext_resource type="PackedScene" uid="uid://b02s22ak1foph" path="res://ui/item_balloon.tscn" id="4_0hc0a"]
[ext_resource type="PackedScene" uid="uid://doyt36tmeupl2" path="res://ui/gps.tscn" id="5_6tncn"]
[ext_resource type="PackedScene" uid="uid://b060ub1c3cpsf" path="res://actors/shadow.tscn" id="6_ibiqb"]
[ext_resource type="PackedScene" uid="uid://d3wxhev3telpw" path="res://modules/damage_dealer_module.tscn" id="6_lmiaw"]
[ext_resource type="PackedScene" uid="uid://porud4gj3lgo" path="res://modules/alive_module.tscn" id="7_eowff"]
[ext_resource type="PackedScene" uid="uid://cnki7wf0pqri2" path="res://modules/controllers/player_pathfinding_controller_module.tscn" id="11_rkwqa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8v2hg"]
radius = 3.0

[sub_resource type="Animation" id="Animation_peuc1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_885hu"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.166667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.2), Vector2(1, 1), Vector2(1.2, 1), Vector2(1, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pl34g"]
_data = {
&"RESET": SubResource("Animation_peuc1"),
&"idle": SubResource("Animation_885hu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vjxgv"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ndkef"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c02ud"]
switch_mode = 2
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tqwx8"]
states/idle/node = SubResource("AnimationNodeAnimation_vjxgv")
states/idle/position = Vector2(522, 107.333)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_ndkef"), "idle", "End", SubResource("AnimationNodeStateMachineTransition_c02ud")]

[node name="Player" type="CharacterBody2D" groups=["player"]]
process_mode = 3
z_index = 2
script = ExtResource("1_0lbjl")

[node name="GunTurretModule" parent="." instance=ExtResource("3_td6ek")]
position = Vector2(0, -9)
shoot_delay = 0.2
windup_shoot_delay = 0.1
enabled = false
damage = 100

[node name="Node2D" parent="." instance=ExtResource("3_yylic")]
position = Vector2(1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8v2hg")

[node name="SpritePivot" type="Node2D" parent="."]
z_index = 3
position = Vector2(0, -3)

[node name="Sprite2D" type="Sprite2D" parent="SpritePivot"]
material = ExtResource("3_m3new")
texture = ExtResource("2_hf73d")
hframes = 8
vframes = 8
frame = 3
region_rect = Rect2(32, 0, 8, 8)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="Shadow" parent="." instance=ExtResource("6_ibiqb")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pl34g")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_tqwx8")
anim_player = NodePath("../AnimationPlayer")

[node name="ItemBalloon" parent="." instance=ExtResource("4_0hc0a")]
position = Vector2(0, -9)

[node name="GpsPivot" parent="." instance=ExtResource("5_6tncn")]
visible = false
z_index = 9

[node name="DamageDealerModule" parent="." instance=ExtResource("6_lmiaw")]
visible = false

[node name="AliveModule" parent="." instance=ExtResource("7_eowff")]
visible = false
max_hp = 3
should_free_on_dead = false
damage_stun_amount = 0.1
invincibility_amount = 1.0

[node name="PlayerControllerModule" parent="." instance=ExtResource("11_rkwqa")]
speed = 75.0

[connection signal="died" from="AliveModule" to="." method="_on_die"]
[connection signal="died" from="AliveModule" to="DamageDealerModule" method="disable"]
[connection signal="took_damage" from="AliveModule" to="." method="_on_take_damage"]
